err/django-object-log.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_object_log-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/object_log'...
Listing './lib/python3.5/site-packages/object_log/management'...
Listing './lib/python3.5/site-packages/object_log/management/commands'...
Listing './lib/python3.5/site-packages/object_log/migrations'...
Listing './lib/python3.5/site-packages/object_log/muddle'...
Listing './lib/python3.5/site-packages/object_log/templates'...
Listing './lib/python3.5/site-packages/object_log/templates/object_log'...
Listing './lib/python3.5/site-packages/object_log/templates/object_log/muddle'...
Listing './lib/python3.5/site-packages/object_log/templatetags'...
Compiling './lib/python3.5/site-packages/object_log/templatetags/object_log_tags.py'...
***   File "./lib/python3.5/site-packages/object_log/templatetags/object_log_tags.py", line 45
    raise TemplateSyntaxError, "'content_type_link' tag takes two arguments: a content type id and pk"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/object_log/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
